# Census-taker

./: .gitignore  CMakeLists.txt  README.md  projectConfig.cmake  sourceTree.cmake
cmake_files/: ossGoogleTestProject.cmake
inc/: Person.h  User.h  UserDBRepository.h  UserManager.h
src/: Person.cpp  User.cpp  UserManager.cpp
test/: CMakeLists.txt  testConfig.cmake
test/unit/: CMakeLists.txt
test/unit/inc/: UserDBRepositoryStub.h  deneme.h  testUserManager.h
test/unit/src/: deneme.cpp  testUserManager.cpp
